Bug 414907 - "Bookmarks icon is missing text when in Customize Toolbar mode" (do not remove attributes after removing broadcaster) [p=arenevier@fdn.fr (arno.) r=Neil sr=jst a1.9=schrep]